plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.1'
    id 'io.spring.dependency-management' version '1.1.5'
    id 'jacoco'
}

group = 'com.bankengine.catalog'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '21'
}

repositories {
    mavenCentral()
    maven { url "https://repository.jboss.org/maven2/" }
}

jacoco {
    toolVersion = "0.8.11"
}

dependencies {
    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.security:spring-security-oauth2-client'
    implementation 'org.springframework.security:spring-security-oauth2-resource-server'
    implementation 'org.springframework.security:spring-security-oauth2-jose'

    // FORCE UPGRADE for Transitive Vulnerabilities
    constraints {
        implementation('com.thoughtworks.xstream:xstream:1.4.21') {
            because 'fixes CVE-2024-47072 (High Severity DoS vulnerability)'
        }
    }

    // Drools Dependencies
    def droolsVersion = '8.44.2.Final'
    implementation "org.drools:drools-core:${droolsVersion}"
    implementation "org.drools:drools-compiler:${droolsVersion}"
    implementation "org.drools:drools-xml-support:${droolsVersion}"
    implementation "org.kie:kie-api:${droolsVersion}"
    implementation "org.kie:kie-ci:${droolsVersion}"

    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    runtimeOnly 'com.h2database:h2'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    runtimeOnly 'org.postgresql:postgresql'

    // Redis Session Management
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.session:spring-session-data-redis'

    // Actuator for Health Checks
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // Optional: Improved observability
    implementation 'io.micrometer:micrometer-observation'
    implementation 'io.micrometer:micrometer-tracing-bridge-brave'
}

def coverageExclusions = [
    "**/dto/**",
    "**/model/**",
    "**/config/**",
    "**/exception/**",
    "**/*Application*",
    "**/*MapperImpl*",
    "org/drools/drl/parser/lang/**"
]

def frontendDir = "$projectDir/src/main/frontend"

// Check if `npm` is available on the host. Tasks that require npm will be
// skipped when npm is not present so the Java build can run on machines
// without Node installed.
def isWindows = System.properties['os.name'].toLowerCase().contains('windows')
def npmCheckCmd = isWindows ? ['cmd','/c','where npm'] : ['sh','-c','which npm']
def npmAvailable = { ->
    try {
        def proc = npmCheckCmd.execute()
        proc.waitFor()
        return proc.exitValue() == 0
    } catch(Exception e) {
        return false
    }
}

tasks.register('installFrontend', Exec) {
    onlyIf { npmAvailable() && file("$frontendDir/package.json").exists() }
    workingDir "$frontendDir"
    inputs.file("$frontendDir/package.json")
    outputs.dir("$frontendDir/node_modules")
    if (isWindows) {
        commandLine 'cmd', '/c', 'npm', 'install'
    } else {
        commandLine 'npm', 'install'
    }
}

tasks.register('buildFrontend', Exec) {
    onlyIf { npmAvailable() && file("$frontendDir/src").exists() }
    dependsOn 'installFrontend'
    workingDir "$frontendDir"
    inputs.dir("$frontendDir/src")
    inputs.dir("$frontendDir/public")
    outputs.dir("$frontendDir/build")
    if (isWindows) {
        commandLine 'cmd', '/c', 'npm', 'run', 'build'
    } else {
        commandLine 'npm', 'run', 'build'
    }
}

tasks.register('copyFrontend', Copy) {
    onlyIf { file("$frontendDir/build").exists() }
    dependsOn 'buildFrontend'
    from "$frontendDir/build"
    into "$buildDir/resources/main/static"
}

processResources.dependsOn 'copyFrontend'

tasks.named('test') {
    useJUnitPlatform()

    jacoco {
        excludes = ["org/drools/drl/parser/lang/*"]
    }

    finalizedBy jacocoTestReport
}

jacocoTestReport {
    dependsOn test, compileJava, processResources, 'copyFrontend'
    reports {
        xml.required = true
        html.required = true
    }
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: coverageExclusions)
        }))
    }
}

jacocoTestCoverageVerification {
    dependsOn jacocoTestReport
    violationRules {
        // TIER 1: CRITICAL (Pricing & Math)
        rule {
            element = 'PACKAGE'
            includes = ['com.bankengine.pricing.service*', 'com.bankengine.pricing.calculation*', 'com.bankengine.pricing.service.drl*']
            limit {
                counter = 'BRANCH'
                minimum = 0.80
            }
        }

        // TIER 2: SECURITY (Auth & Tenancy)
        rule {
            element = 'PACKAGE'
            includes = ['com.bankengine.auth.service*', 'com.bankengine.auth.security*', 'com.bankengine.auth.config*']
            limit {
                counter = 'BRANCH'
                minimum = 0.95 // Strict: Security paths must be 100% verified
            }
        }

        // TIER 3: BUSINESS CORE (Catalog & FAT DTO logic)
        rule {
            element = 'PACKAGE'
            includes = ['com.bankengine.catalog.service*']
            limit {
                counter = 'BRANCH'
                minimum = 0.70
            }
        }

        // TIER 4: THE REST (Global fallback)
        rule {
            element = 'BUNDLE'
            limit {
                counter = 'LINE'
                minimum = 0.70
            }
        }
    }
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: coverageExclusions)
        }))
    }
}

check.dependsOn jacocoTestCoverageVerification